# ExoPlayer

./: .gitignore  .gitmodules  build.gradle  common_library_config.gradle  constants.gradle  core_settings.gradle  publish.gradle
.github/: publish_exo.yml
.github/workflows/: publish_exo.yml
demos/cast/: build.gradle
demos/gl/: build.gradle
demos/main/: build.gradle
demos/surface/: build.gradle
extensions/adloader-core/: README.md  build.gradle  proguard-rules.txt
extensions/av1/: build.gradle
extensions/cast/: build.gradle
extensions/cronet/: build.gradle
extensions/dav1d/: README.md  build.gradle
extensions/ffmpeg/: build.gradle
extensions/flac/: build.gradle
extensions/gvr/: build.gradle
extensions/ima/: build.gradle
extensions/jobdispatcher/: build.gradle
extensions/leanback/: build.gradle
extensions/vvc/src/: CMakeLists.txt
extensions/vvc/src/main/: AndroidManifest.xml
extensions/vvc/src/main/core-vvc/jni/: Application.mk  a-debugworkaround-arm.mk  a-mxvvcdec.mk  rebuild-all.sh  rebuild-vvcDecoder.sh  util.sh
extensions/vvc/src/main/core-vvc/jni/android/: vvc1_jni.cpp
extensions/vvc/src/main/core-vvc/jni/libvvc/api/: o266dec_api.h
extensions/vvc/src/main/core-vvc/jni/libvvc/h266_decoder/: getopt.h  mem_util.h  thread_util.h  util.h
extensions/vvc/src/main/java/com/google/android/exoplayer2/ext/vvc/: LibVVCVideoRenderer.java  VVCDecoder.java  VVCDecoderException.java  VVCLibrary.java  package-info.java
playbacktests/: build.gradle
robolectricutils/: build.gradle
testdata/: build.gradle
testutils/: build.gradle
(+327 files in other folders)
